--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description:           >
   with a focus on personal sites that are meant to impress.
 
 # A shorter description for the sidebar.
-tagline:               Learn more about species!
+tagline:               Learn more about species
 
 # A list of keywords for your blog
 keywords:              []
